Refatorando o botão inscreva-se na página planos

--- a/site/agenciaViagem/paginas/cruzeiro.html
+++ b/site/agenciaViagem/paginas/cruzeiro.html
@@ -53,24 +53,18 @@
         <div class="modal-header">
           <h5 class="modal-title" id="modalLoginTitulo">Escolha o seu plano</h5>
         </div>
-        <div class="modal-body">
-          <form class="form">
+        <div class="modal-body escrever">
+          <div>
+            <a href="paginas/inscricaoGold.html" target="_blank">
+              Planos Nacionais
+            </a>
+          </div>
 
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-              <label class="form-check-label" for="flexRadioDefault1">
-                Planos Nacionais
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-              <label class="form-check-label" for="flexRadioDefault2">
-                Planos Internacionais
-              </label>
-            </div>
-
-            <button type="submit" class="btn btn-primary mt-2">Entrar na Conta</button>
-          </form>
+          <div>
+            <a href="paginas/inscricaoGold.html" target="_blank">
+              Planos Internacionais
+            </a>
+          </div>
         </div>
       </div>
     </div>
