--- a/site/agenciaViagem/paginas/planos.html
+++ b/site/agenciaViagem/paginas/planos.html
@@ -49,7 +49,6 @@
 
 
   <!-- Modal Inscreva-se -->
-
   <div class="modal fade" id="modal-escrever" tabindex="-1" role="dialog" aria-labelledby="modalLoginTitulo" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
@@ -116,7 +115,7 @@
             <a class="nav-link" data-bs-toggle="modal" data-bs-target="#modal-login" href=" #">Login</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-primary ms-md-2" data-bs-target="#modal-escrever" href="#">Inscreva-se</a>
+            <a class="btn btn-outline-primary ms-md-2" data-bs-toggle="modal" data-bs-target="#modal-escrever" href=" #">Inscreva-se</a>
           </li>
         </ul>
       </div>
