Verificando erro no caminho do link do botão increva-se de todas as páginas

--- a/site/agenciaViagem/paginas/inscricaoGold.html
+++ b/site/agenciaViagem/paginas/inscricaoGold.html
@@ -57,13 +57,13 @@
         </div>
         <div class="modal-body escrever">
           <div>
-            <a href="paginas/inscricaoGold.html" target="_blank">
+            <a href="../paginas/inscricaoGold.html" target="_blank">
               Planos Nacionais
             </a>
           </div>
 
           <div>
-            <a href="paginas/inscricaoGold.html" target="_blank">
+            <a href="../paginas/inscricaoGold.html" target="_blank">
               Planos Internacionais
             </a>
           </div>
