Repetição dos links no botão escreva-se

--- a/site/agenciaViagem/paginas/cruzeiro.html
+++ b/site/agenciaViagem/paginas/cruzeiro.html
@@ -61,7 +61,7 @@
           </div>
 
           <div>
-            <a href="../paginas/inscricaoGold.html" target="_blank">
+            <a href="../paginas/inscricaoInternacionais.html" target="_blank">
               Planos Internacionais
             </a>
           </div>
